# skew

./: pyproject.toml  run.py
skew/: __main__.py  awsclient.py  awsdefaults.py  config.py  exception.py
skew/arn/: __init__.py
skew/resources/: __init__.py  json_dump.py  resource.py
skew/resources/aws/: __init__.py  acm.py  autoscaling.py  cloudformation.py  cloudfront.py  cloudsearch.py  cloudtrail.py  cloudwatch.py  dynamodb.py  ec2.py  ecr.py  ecs.py  efs.py  elasticache.py  elasticbeanstalk.py  elb.py  es.py  firehose.py  iam.py  kms.py  lambda.py  opsworks.py  rds.py  redshift.py  route53.py  s3.py  ses.py  sns.py  sqs.py  stepfunctions.py  support.py
tests/unit/: test_arn.py  test_arn_component.py  test_resource.py
