[tool.poetry]
name = "skew"
version = "0.19.0"
description = ""
authors = ["Mark Beacom <m@beacom.dev>"]
include = [
    "skew/_version",
    "README.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.39"
PyYAML = "^5.4.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mock = "^4.0.3"
nose = "^1.3.7"
tox = "^3.23.0"
placebo = "^0.9.0"
coverage = "^5.5"
python-coveralls = "^2.9.3"
isort = "^5.8.0"
black = "^20.8b1"
bandit = "^1.7.0"
mypy = "^0.812"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
